# opendetection

./: .gitignore  CMakeLists.txt  ObjectDetection.md
classifiers/: CMakeLists.txt  ODClassifier.h  ODConvClassifier.cpp  ODConvClassifier.h
cmake/: od_mandatory_dependency.cmake  od_targets.cmake
cmake/modules/: FindCaffe.cmake  FindLMDB.cmake
common/pipeline/: ODDetection.h
datasets/: CMakeLists.txt  CMakeLists.txt.bak  ODDatasetCIFAR.cpp  ODDatasetCIFAR.h  ODDatasetFolder.cpp  ODDatasetFolder.h  ODDatasetList.cpp  ODDatasetList.h  ODDatasetMNIST.cpp  ODDatasetMNIST.h  common.h
detectors/global2D/: CMakeLists.txt  VOC_AP.cpp  VOC_AP.h
detectors/global2D/detection/: ODClassifier.cpp  ODConvClassifier.cpp  ODConvClassifier.h  ODConvDetector.cpp  ODConvDetector.h
detectors/global2D/training/: ODConvTrainer.cpp  ODConvTrainer.h
examples/: CMakeLists.txt
examples/caffe_xor/: .CMakeLists.txt.swp  CMakeLists.txt  solver.prototxt
examples/classification/: CMakeLists.txt
examples/classification/cub/: CMakeLists.txt  classify_cub.cpp  convert_cub_data.cpp  create_cub.sh  deploy.prototxt  get_cub.sh  solver.prototxt  train_cub.cpp  train_val.prototxt
examples/classification/mnist/: CMakeLists.txt  classify_mnist.cpp  convert_mnist_data.cpp  create_mnist.sh  get_mnist.sh  lenet_solver.prototxt  lenet_train_test.prototxt  readme.md  train_mnist.cpp
examples/mnist/: CMakeLists.txt  classify_mnist.cpp  convert_mnist_data.cpp  create_mnist.sh  train_mnist.cpp
examples/mnist_train/: CMakeLists.txt  lenet_solver.prototxt  lenet_train_test.prototxt  od_cnn_mnist_train_simple.cpp  readme.md
examples/mnist_train/mnist_test_lmdb/: lock.mdb
examples/mnist_train/mnist_train_lmdb/: lock.mdb
examples/objectdetector/: CMakeLists.txt  fetch_faster_rcnn_models.sh  od_faster_rcnn.cpp  od_faster_rcnn_cam.cpp
